--- a/app/src/main/res/layout/activity_app_lock_screen.xml
+++ b/app/src/main/res/layout/activity_app_lock_screen.xml
@@ -30,6 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:maxLength="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
             android:inputType="number" />
@@ -39,6 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:maxLength="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
             android:inputType="number" />
@@ -48,6 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:maxLength="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
             android:inputType="number" />
