--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:background="@color/lightGolden">
+        android:background="@color/lightGray">
 
 
         <LinearLayout
@@ -65,6 +65,9 @@
                 android:id="@+id/list_item_message_summary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:ellipsize="end"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/black" />
 
