--- a/app/src/main/res/layout/set_app_lock_fragment.xml
+++ b/app/src/main/res/layout/set_app_lock_fragment.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:windowSoftInputMode="adjustPan"
+    android:id="@+id/set_app_lock_fragment_screen"
     tools:context="com.example.diaryofsecrets.CatalogActivity">
 
     <Button
@@ -55,6 +56,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
+            android:maxLength="1"
             android:inputType="number" />
 
         <EditText
@@ -64,6 +66,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
+            android:maxLength="1"
             android:inputType="number" />
 
         <EditText
@@ -73,6 +76,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
+            android:maxLength="1"
             android:inputType="number" />
 
     </LinearLayout>
@@ -101,6 +105,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
+            android:maxLength="1"
             android:inputType="number" />
 
         <EditText
@@ -110,6 +115,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
+            android:maxLength="1"
             android:inputType="number" />
 
         <EditText
@@ -119,6 +125,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
+            android:maxLength="1"
             android:inputType="number" />
 
         <EditText
@@ -128,6 +135,7 @@
             android:layout_weight="1"
             android:background="@drawable/button_black_outline"
             android:gravity="center"
+            android:maxLength="1"
             android:inputType="number" />
 
     </LinearLayout>
@@ -140,18 +148,12 @@
         android:layout_marginTop="40dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/select_security_question"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/select_security_question" />
-
         <Spinner
             android:id="@+id/security_question_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown" />
+            android:spinnerMode="dropdown"
+            android:layout_marginBottom="10dp"/>
 
         <EditText
             android:id="@+id/security_question_answer"
