--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -25,4 +25,9 @@
         android:title="@string/change_theme"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/log_out"
+        android:title="@string/log_out"
+        app:showAsAction="never"/>
+
 </menu>
