--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1EA4C4</color>
-    <color name="colorPrimaryDark">#0B7091</color>
-    <color name="colorAccent">#FF4081</color>
-
+    
     <color name="lightGray">#D3D3D3</color>
     <color name="mediumGray">#808080</color>
+    <color name="dimmer_black">#81000000</color>
     <color name="darkGray">#262626</color>
 
     <color name="white">#ffffff</color>
