--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -80,7 +80,7 @@
             android:background="@color/white"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:hint="@string/write_message"
+            android:hint="@string/message_hint"
             android:textSize="18sp" />
 
         </LinearLayout>
