--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
+
+    <color name="backgroundGray">#EEEEEE</color>
     <color name="lightGray">#D3D3D3</color>
     <color name="mediumGray">#808080</color>
     <color name="dimmer_black">#81000000</color>
